--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             width: 100%;
             margin-bottom: 10px;
         }
+
+        .form-container input[readonly] {
+            background-color: #f8f9fa; /* Чтобы выделить readonly поля */
+        }
     </style>
 </head>
 
