--- a/map.html
+++ b/map.html
@@ -39,7 +39,7 @@
 <body>
     <div id="map"></div>
     <div class="map-controls">
-        <button id="done-button">Готово</button>
+        <button id="done-button" disabled>Готово</button>
     </div>
 
     <script>
